vlib/v/checker/tests/inout/pub_fn_main.out
vlib/v/checker/tests/inout/pub_fn_main.v:1:1: error: function `main` cannot be declared public
    1| pub fn main() {
       ~~~
    2|     println('Hello world !')
    3| }
